--- a/javaparser-core-serialization/pom.xml
+++ b/javaparser-core-serialization/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<artifactId>javaparser-parent</artifactId>
-		<groupId>com.github.javaparser</groupId>
+		<groupId>net.itakeshi</groupId>
 		<version>3.16.4-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -51,7 +51,7 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.github.javaparser</groupId>
+			<groupId>net.itakeshi</groupId>
 			<artifactId>javaparser-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
