--- a/javaparser-symbol-solver-core/pom.xml
+++ b/javaparser-symbol-solver-core/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
       <artifactId>javaparser-parent</artifactId>
-      <groupId>com.github.javaparser</groupId>
+      <groupId>net.itakeshi</groupId>
       <version>3.16.4-SNAPSHOT</version>
-  </parent>    
+  </parent>
   <modelVersion>4.0.0</modelVersion>
 
     <artifactId>javaparser-symbol-solver-core</artifactId>
@@ -32,7 +32,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.javaparser</groupId>
+            <groupId>net.itakeshi</groupId>
             <artifactId>javaparser-core</artifactId>
             <version>${project.version}</version>
         </dependency>
