--- a/javaparser-symbol-solver-testing/pom.xml
+++ b/javaparser-symbol-solver-testing/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>javaparser-parent</artifactId>
-        <groupId>com.github.javaparser</groupId>
+        <groupId>net.itakeshi</groupId>
         <version>3.16.4-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -177,7 +177,7 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.github.javaparser</groupId>
+            <groupId>net.itakeshi</groupId>
             <artifactId>javaparser-symbol-solver-core</artifactId>
             <version>${project.version}</version>
         </dependency>
